--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,8 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, 299px);
+    justify-content: center;
 }
 
 .orange {
@@ -117,7 +118,7 @@ body {
 }
 
 .box {
-    padding: 10px 30px;
+    padding: 10px 50px;
 }
 
 .box img {
@@ -129,7 +130,7 @@ h1 {
     color: var(--neutrallightgray);
     font-weight: 700;
     text-transform: uppercase;
-    margin: 10px;
+    margin: 10px 0;
 }
 
 p {
@@ -137,7 +138,6 @@ p {
     line-height: 1.8;
     font-weight: 400;
     font-size: 20px;
-    margin: 20px 110px 20px 10px;
 }
 
 a {
@@ -146,7 +146,7 @@ a {
     text-decoration: none;
     padding: 10px 30px;
     width: fit-content;
-    margin: 60px 10px 39px;
+    margin: 100px 0 39px;
     border-radius: 50px;
     border: 2px solid var(--neutrallightgray);
     transition: .3s;
